fix: update openAPI
